--- a/style.css
+++ b/style.css
@@ -994,6 +994,10 @@ header{
 
 /*================== Buttons End ========================*/
     
+section{
+    max-width: 80%;
+    margin: 0 auto;
+}
 
 /*=================== Cards ==========================*/
 
