--- a/style.css
+++ b/style.css
@@ -573,7 +573,7 @@ header{
 
 
 .menu-content-image-left__copy-container{
-    padding-block: var(--spacing-3-);
+    padding: var(--spacing-3-);
     display: flex;
     flex-direction: column;
     gap: var(--spacing-4-);
